--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fdfaf6;
+    background-color: #fce1bd;
     color: #5a4a42;
     text-align: center;
 }
 
 h1, h2 {
     font-family: 'Playfair Display', serif;
-    color: #3e322c;
+    color: #fb641e;
 }
 
 /* Header */
