změna barvy odstavcu

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #efa17a;
-    color: #5a4a42;
+    color: #f9e6c9;
     text-align: center;
 }
 
